[gd_scene load_steps=6 format=3 uid="uid://bgrrsga8gyqvi"]

[ext_resource type="Script" path="res://Scripts/Contollers/flashlightTechnique.gd" id="1_yxg7j"]
[ext_resource type="PackedScene" uid="uid://bc8lh0rihgxvi" path="res://Models/Quest2Controllers/OculusQuest2TouchController_Right.gltf" id="2_ac0vi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7mn6f"]
radius = 0.2
height = 30.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_l026r"]
radius = 0.2
height = 30.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jcndo"]
transparency = 1
albedo_color = Color(1, 1, 0.309804, 0.0352941)
emission_enabled = true
emission = Color(1, 1, 0.52549, 1)

[node name="RightController" type="XRController3D"]
tracker = &"right_hand"
script = ExtResource("1_yxg7j")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -14)
shape = SubResource("CapsuleShape3D_7mn6f")
collision_mask = 257
collide_with_areas = true
collide_with_bodies = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -15)
mesh = SubResource("CapsuleMesh_l026r")
surface_material_override/0 = SubResource("StandardMaterial3D_jcndo")

[node name="OculusQuest2TouchController_Right" parent="." instance=ExtResource("2_ac0vi")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[connection signal="button_pressed" from="." to="." method="_on_button_pressed"]
[connection signal="button_released" from="." to="." method="_on_button_released"]
